--- a/.drone.yml
+++ b/.drone.yml
@@ -7,6 +7,7 @@ steps:
   image: wordpressdevelop/php
   pull: if-not-exists
   commands:
+  - php -l *.php
   - ./deploy/deploy.sh
   environment:
     SVN_USERNAME:
